# -product_recommendation

./: .env  .gitignore  index.html  package-lock.json  package.json
api/: pyproject.toml  rules.csv
api/app/: database.py  main.py  models.py  recommendation.py  schemas.py
api/app/routers/: orders.py  products.py  recommendations.py
api/app/services/: apriori_service.py
src/: App.css  App.jsx  theme.jsx
src/data/: products.js
src/pages/: Cart.jsx  Home.jsx
src/services/: pexelsService.js
