[project]
name = "project-api"
version = "0.1.0"
description = "FastAPI backend for ecommerce analytics and Apriori-based product recommendations"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "fastapi>=0.115.0",
  "mlxtend>=0.23.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
